--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon",
+    "build": "rimraf ./build && tsc",
+    "start": "npm run build && node build/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "react": "16.13.0",
     "react-dom": "16.13.0",
-    "react-router-dom": "5.1.2"
+    "react-router-dom": "5.1.2",
+    "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "@types/node": "13.9.1",
+    "nodemon": "2.0.2",
+    "rimraf": "^3.0.2",
+    "ts-node": "8.6.2"
   }
 }
