--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-router-dom": "5.1.2",
-    "typescript": "^3.8.3"
+    "typescript": "3.8.3"
   },
   "devDependencies": {
     "@types/node": "13.9.1",
+    "@types/react": "16.9.23",
+    "@types/react-dom": "16.9.5",
+    "@types/react-router-dom": "5.1.3",
     "nodemon": "2.0.2",
     "rimraf": "^3.0.2",
     "ts-node": "8.6.2"
