--- a/package.json
+++ b/package.json
@@ -6,23 +6,35 @@
   "scripts": {
     "start:dev": "nodemon",
     "build": "rimraf ./build && tsc",
-    "start": "npm run build && node build/index.js"
+    "start": "npm run build && node build/index.js",
+    "webpack": "webpack -wd",
+    "dev": "nodemon --exec babel-node src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "1.7.4",
+    "ejs": "3.0.1",
+    "express": "4.17.1",
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-router-dom": "5.1.2",
     "typescript": "3.8.3"
   },
   "devDependencies": {
+    "@babel/cli": "7.8.4",
+    "@babel/core": "7.9.0",
+    "@babel/node": "7.8.7",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/polyfill": "7.8.7",
+    "@babel/preset-env": "7.9.0",
+    "@babel/preset-react": "7.9.4",
     "@types/node": "13.9.1",
     "@types/react": "16.9.23",
     "@types/react-dom": "16.9.5",
     "@types/react-router-dom": "5.1.3",
     "nodemon": "2.0.2",
-    "rimraf": "^3.0.2",
+    "rimraf": "3.0.2",
     "ts-node": "8.6.2"
   }
 }
