--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "express": "4.17.1",
     "react": "16.13.0",
     "react-dom": "16.13.0",
+    "react-helmet": "5.2.1",
     "react-router-dom": "5.1.2",
-    "typescript": "3.8.3"
+    "webpack": "4.42.1",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "3.10.3"
   },
   "devDependencies": {
     "@babel/cli": "7.8.4",
@@ -33,8 +36,11 @@
     "@types/react": "16.9.23",
     "@types/react-dom": "16.9.5",
     "@types/react-router-dom": "5.1.3",
+    "babel-loader": "8.1.0",
     "nodemon": "2.0.2",
     "rimraf": "3.0.2",
-    "ts-node": "8.6.2"
+    "ts-loader": "6.2.2",
+    "ts-node": "8.6.2",
+    "typescript": "3.8.3"
   }
 }
