--- a/.babelrc
+++ b/.babelrc
@@ -8,9 +8,10 @@
         }
       }
     ],
-    ["@babel/preset-react"]
+    "@babel/preset-typescript",
+    "@babel/preset-react"
   ],
   "plugins": [
-    ["@babel/plugin-proposal-class-properties"]
+    "@babel/plugin-proposal-class-properties"
   ]
 }
