--- a/.babelrc
+++ b/.babelrc
@@ -8,8 +8,8 @@
         }
       }
     ],
-    "@babel/preset-typescript",
-    "@babel/preset-react"
+    "@babel/preset-react",
+    "@babel/preset-typescript"
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties"
