--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "compression": "1.7.4",
     "ejs": "3.0.1",
     "express": "4.17.1",
+    "isomorphic-unfetch": "3.0.0",
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-helmet": "5.2.1",
