--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/index.js",
     "webpack": "webpack -wd",
-    "dev": "nodemon --exec babel-node src/index.js"
+    "dev": "nodemon --exec babel-node src/index.ts"
   },
   "author": "Serhii Minin",
   "license": "ISC",
   "dependencies": {
+    "@types/compression": "^1.7.0",
     "compression": "1.7.4",
     "ejs": "3.0.1",
     "express": "4.17.1",
@@ -34,6 +35,7 @@
     "@babel/preset-env": "7.9.0",
     "@babel/preset-react": "7.9.4",
     "@babel/preset-typescript": "7.9.0",
+    "@types/express": "4.17.4",
     "@types/node": "13.9.1",
     "@types/react": "16.9.23",
     "@types/react-dom": "16.9.5",
